# Copyright 2022 Intel Corporation.
# SPDX-License-Identifier: Apache-2.0

framework_files += \
    files(
        'cpu_affinity.cpp',
        'malloc.cpp',
        'pthread_barrier.cpp',
        '../generic/kvm.c',
        '../generic/memfpt.c',
        '../generic/msr.c',
        '../generic/physicaladdress.c',
    )
