# Copyright 2022 Intel Corporation.
# SPDX-License-Identifier: Apache-2.0

framework_files += \
    files(
        'aligned_alloc.cpp',
        'child_debug.cpp',
        'fcntl.c',
        'fnmatch.c',
        'mman.c',
        'resource.cpp',
        'signals.cpp',
        'splitlock_detect.c',
        'tmpfile.c',
        'ucrt-mapping.c',
        'unistd.c',
        'win32_perror.c',
        '../generic/kvm.c',
        '../generic/memfpt.c',
    )
