# Copyright 2022 Intel Corporation.
# SPDX-License-Identifier: Apache-2.0

framework_files += \
    files(
        'aligned_alloc.cpp',
        'child_debug.cpp',
        'cpu_affinity.cpp',
        'fcntl.c',
        'fnmatch.c',
        'gettid.cpp',
        'mman.c',
        'resource.cpp',
        'signals.cpp',
        'splitlock_detect.c',
        'tmpfile.c',
        'unistd.c',
        'win32_perror.cpp',
        '../generic/kvm.c',
        '../generic/memfpt.c',
    )
